--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -35,7 +35,7 @@
   margin-bottom: 64px;
 }
 
-.footer-col h5 {
+.footer-col-heading {
   font-family: var(--font-body);
   font-size: 0.6rem;
   font-weight: 500;
